refactor table head cell css

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -10,166 +10,8 @@ import Head from 'next/head';
 
 ## Changelog
 
-### V1
-
-#### V1.3.0 - 2023-09-18
-
-- Updated the mrt `package.json` `@mantine/` peerDependencies to `^6.0.0` to indicate that MRT v1 is now compatible with Mantine v6
-- Upgraded to `@tanstack/react-table v8.10.0`
-  - Better accessorKey deep key inference
-  - New row pinning apis (MRT does not implement row pinning features yet)
-
-#### V1.2.1 - 2023-09-10
-
-- Upgraded to `@tanstack/react-table v8.9.8` and `@tanstack/react-virtual v3.0.0-beta.60` for better performance and bug fixes
-
-#### V1.2.0 - 2023-08-23
-
-- Added new `"head-overlay"` `positionToolbarAlertBanner` option to overlay the alert banner over the table header
-- Added new `renderToolbarAlertBannerContent` table option to allow full customization of the alert banner content
-
-#### V1.1.2 - 2023-08-18
-
-- Disable other row edit buttons when one row is being edited by default
-- Hide global and filter text input clear buttons until there is text in the input
-- Added et translations that can be imported from `'material-react-table/locales/et'`
-
-#### V1.1.1 - 2023-08-12
-
-- Fixed editing cancel button not restoring original row data in modal editDisplayMode
-
-#### V1.1.0 - 2023-08-12
-
-- Fixed editing cancel button not restoring original row data in inline row editDisplayMode
-- Fixed Filter Range Slider initial range min and max sometimes not being set correctly after loading data
-- Removed Edit Modal Title by default
-- Replaced `"Unsorted"` tooltip on header sort icon buttons with sort by next sort direction tooltip
-- Added ar translations that can be imported from `'material-react-table/locales/ar'`
-
-#### V1.0.0 - 2023-07-18
-
-- V1 Stable Release
-
-### V1 Betas
-
-#### V1.0.0-beta.28
-
-- New Loading Overlay in Table Container to indicate loading state that will show when `state.isLoading` or `state.showLoadingOverlay` is `true`
-- Progress Bars will no longer show when `state.isLoading` is true. Must set `state.showProgressBars` or `state.isSaving` to `true` to show them.
-- Filtering and Sorting icons in header cell will now highlight in primary color when active
-- Fixed page scroll position not being restored when exiting full screen mode
-- TypeScript TData generic no longer required and will default to `{}` if not provided
-
-#### V1.0.0-beta.27
-
-- hitting `'enter'` key when filtering in popover display mode now closes the popover
-
-#### V1.0.0-beta.26
-
-- Renamed `creatingMode` table option to `createDisplayMode`
-- Renamed `editingMode` table option to `editDisplayMode`
-- Added `columnFilterDisplayMode` table option to render column filters in `'subheader' | 'popover' | 'custom'` display modes
-- Added `paginationDisplayMode` table option to render pagination in `'default' | 'pages' | 'custom'` display modes
-- Added `selectDisplayMode` table option to render `'checkbox' | 'radio' | 'switch'` select modes
-- Fixed large pagination numbers not being formatted with locale string
-- Better column actions menu alignment
-- Starting using `IconFilterCog` tabler icon for filter mode switching button.
-
-#### V1.0.0-beta.25
-
-- Fixed "Toggle Full Screen" tooltip not hiding after clicking to toggle full screen
-- Solved a lot of create and edit mode bugs and edge cases
-- Allow simple `table.setCreatingRow(true)` to be called if no default values are needed for new row
-
-#### V1.0.0-beta.24
-
-- Fixed Edit and Create Row Modals not opening
-
-#### V1.0.0-beta.23
-
-- a bunch of create row features (still in progress)
-- renamed `MRT_FlexRender` to just `flexRender`
-
-#### V1.0.0-beta.22
-
-- New `mantinePaginationProps.variant` `"mantine"` to use Mantine's own Pagination component. (removed `showFirstLastPageButtons` in favor of `withEdges`)
-- Default `rowNumberMode` changed to `"static"`
-
-#### V1.0.0-beta.21
-
-- Removed `highlight-words` internal dependency in favor of using Mantine's own Highlight component. Added `mantineHighlightProps` table option to customize the props of the Highlight component used for filter match highlighting
-- Refactored to make `mrt-row-drag` display column cell overrideable
-
-#### V1.0.0-beta.20
-
-- Better TypeScript types to warn not to use other props alongside the `table` prop when passing to `<MantineReactTable />` (Either pass `table` or all table options as props, not both)
-- Removed deprecated `tableInstanceRef` prop to force usage of `useMantineReactTable` hook (way less bugs, easier code)
-- Added functionality to temporarily remove sort when global filter is ranking results, but restore the sort upon clearing the global filter
-- New `mantineSelectCheckboxProps.variant` to allow for checkbox, radio, or switch select variants
-
-#### V1.0.0-beta.19
-
-- New `"custom"` editDisplayMode that does not render any editing UI, but still handles the edit states
-- New `isSaving` state option to show spinner in edit save buttons
-- New `renderEditRowModalContent` table option to allow for the edit modal to be fully customized
-- New `mantineEditRowModalProps` table option to allow for customizing the props of the edit modal
-- Improved custom column actions with new `internalColumnMenuItems` param in `renderColumnActionsMenuItems` column/table option
-- Fixed issues with empty string row ids causing skeleton loading rows to linger after data loaded and changed `getRowId` type to allow returning `undefined`
-- Removed internal `withArrow` props from Mantine Tooltips to respect app themes better (Configure with Mantine ThemeProvider default Props API if you want them back)
-
-#### V1.0.0-beta.18
-
-- Revert `@tabler/react-icons` as an optional peer dependency. Now required again with a minimum version of `2.23.0`
-
-#### V1.0.0-beta.17
-
-- exported new `flexRender` function as a utility to help with custom headless ui renders
-
-#### V1.0.0-beta.16
-
-- Made `@tabler/react-icons` an optional peer dependency to experiment letting devs not have to install it if they are passing in their own custom icons (might revert this)
-
-#### V1.0.0-beta.14
-
-- New `'autocomplete'` and `'range-slider'` filterVariants
-- Fully implement faceted values feature to be used for filter variants
-- Replaced internal Mantine Chip components with Mantine Badge components
-
-#### V1.0.0-beta.13
-
-- Gave proper `TData` generics to all MRT components
-
-#### V1.0.0-beta.12
-
-- New `useMantineReactTable` hook to replace `tableInstanceRef` prop (more to come on this)
-- **ALL** internal MRT components are now exported from `mantine-react-table`!
-- Renamed type `MantineReactTableProps` to `MRT_TableOptions`
-
-#### V1.0.0-beta.10
-
-- Implemented Edit Select variant
-- Fixed Some editing bugs and change default styles for various editing modes
-- Fixed React Key warnings in body and cells
-
-#### V1.0.0-beta.10
-
-- Simplified Density Feature with just 3 modes
-- Swapped out Density Icons
-- Changed default opacity styles of header cell icons
-
-#### V1.0.0-beta.9
-
-- `@mantine/dates` and `dayjs` are now required peer dependencies as they are used for date filters
-
-#### V1.0.0-beta.0
-
-- Upgraded to Mantine v6
-
-### V0 Breaking changes
-
-- Moved from @tabler/icons v1 to @table-icons/react v2
-- Switched to named exports only
+### V2
 
 ## Roadmap
 
-Mantine React Table v1 is slated to release a stable v1.0 based on Mantine v6.0+ by the end of June 2023.
+Mantine React Table V2 for Mantine V7 is still in alpha development.
