--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -29,13 +29,21 @@ import { IconInfoCircle } from '@tabler/icons-react';
   {' for more info.'}
   <br />
   {'Or join the '}
-  <Anchor sx={{ display: 'inline' }} href="https://discord.gg/5wqyRx6fnm" target="_blank">
+  <Anchor
+    sx={{ display: 'inline' }}
+    href="https://discord.gg/5wqyRx6fnm"
+    target="_blank"
+  >
     {'MRT Discord'}
   </Anchor>
   {' to follow along with development.'}
 </Alert>
 
 ### V1
+
+#### V1.3.3 - 2023-10-07
+
+- Upgraded to latest TanStack Table `v8.10.6` and `@tanstack/react-virtual v3.0.0-beta.63` various performance improvements and bug fixes
 
 #### V1.3.2 - 2023-10-03
 
