--- a/apps/mantine-react-table-docs/pages/docs/guides/typescript.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/typescript.mdx
@@ -51,7 +51,7 @@ import {
   MantineReactTable,
   useMantineReactTable,
   type MRT_ColumnDef, // <--- import MRT_ColumnDef
-} from '@mantine/react-table';
+} from 'mantine-react-table';
 import { type User } from './types'; // <--- import your TData type from wherever you defined it
 
 // define your columns, pass User as a generic to MRT_ColumnDef
