--- a/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
@@ -234,7 +234,7 @@ import {
   MRT_TablePagination,
   MantineReactTable,
   useMantineReactTable,
-} from '@mantine/mantine-react-table';
+} from 'mantine-react-table';
 
 const table = useMantineReactTable({
   data,
