--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -3,7 +3,7 @@ import { Alert, Anchor } from '@mantine/core';
 import { IconInfoCircle } from '@tabler/icons-react';
 
 <Head>
-  <title>Changelog and Roadmap - Mantine React Table Docs</title>
+  <title>{'Changelog and Roadmap - Mantine React Table V1 Docs'}</title>
   <meta
     name="description"
     content="Mantine React Table Changelog and Roadmap for future development"
@@ -40,6 +40,10 @@ import { IconInfoCircle } from '@tabler/icons-react';
 </Alert>
 
 ### V1
+
+#### V1.3.4 - 2023-11-06
+
+- Small table head cell accessibility fix
 
 #### V1.3.3 - 2023-10-07
 
