--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -5,7 +5,7 @@ import { Alert } from '@mantine/core';
 import { IconInfoCircle } from '@tabler/icons-react';
 
 <Head>
-  <title>Installation - Mantine React Table Docs</title>
+  <title>Installation - Mantine React Table Docs V2</title>
   <meta name="description" content="How to install Mantine React Table" />
 </Head>
 
@@ -23,9 +23,9 @@ import { IconInfoCircle } from '@tabler/icons-react';
 >
 > Just double-check that you have the following in your package.json, or use the [full install commands](<#install-with-required-peer-dependencies-(recommended)>) below.
 >
-> 1.  `@mantine/core` (^v7.1+)
-> 2.  `@mantine/hooks` (^v7.1+)
-> 3.  `@mantine/dates` (^v7.1+)
+> 1.  `@mantine/core` (^v7.3+)
+> 2.  `@mantine/hooks` (^v7.3+)
+> 3.  `@mantine/dates` (^v7.3+)
 > 4.  `@tabler/icons-react` (2.23.0+)
 > 6.  `dayjs` (v1.11+)
 > 7.  `react` and `react-dom` (v18)
