--- a/apps/mantine-react-table-docs/pages/docs/api/column-options.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/column-options.mdx
@@ -1,9 +1,10 @@
 import Head from 'next/head';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import SourceCode from '../../../components/prop-tables/ColumnOptionsSource';
+import OptionsSwitcher from '../../../example-groups/OptionsSwitcher';
 
 <Head>
-  <title>Column Options - Mantine React Table Docs</title>
+  <title>{'Column Options - Mantine React Table V2 Docs'}</title>
   <meta
     name="description"
     content="All the column options that can be used in Mantine React Table"
@@ -19,6 +20,23 @@ import SourceCode from '../../../components/prop-tables/ColumnOptionsSource';
 </Head>
 
 ## Column Options
+
+<OptionsSwitcher
+  links={[
+    {
+      label: 'Table Options',
+      value: 'table-options',
+    },
+    {
+      label: 'Column Options',
+      value: 'column-options',
+    },
+    {
+      label: 'State Options',
+      value: 'state-options',
+    },
+  ]}
+/>
 
 > Many of the column options you can pass here are the same as the ones that you can pass to the [useReactTable](https://tanstack.com/table/v8/docs/api/core/column-def) ColumnDefs
 
@@ -36,10 +54,7 @@ const columns = useMemo(
   [],
 );
 
-const table = useMantineReactTable({
-  columns,
-  data,
-});
+const table = useMantineReactTable({ columns, data });
 
 return <MantineReactTable table={table} />;
 ```
