--- a/apps/mantine-react-table-docs/pages/docs/api/row-instance-apis.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/row-instance-apis.mdx
@@ -1,9 +1,10 @@
 import Head from 'next/head';
 import RowInstanceAPIsTable from '../../../components/prop-tables/RowInstanceAPIsTable';
 import SourceCode from '../../../components/prop-tables/RowInstanceAPIsSource';
+import OptionsSwitcher from '../../../example-groups/OptionsSwitcher';
 
 <Head>
-  <title>Row Instance APIs - Mantine React Table Docs</title>
+  <title>{'Row Instance APIs - Mantine React Table V2 Docs'}</title>
   <meta
     name="description"
     content="All the row instance methods and objects that can be accessed from the table instance in Mantine React Table"
@@ -20,6 +21,29 @@ import SourceCode from '../../../components/prop-tables/RowInstanceAPIsSource';
 
 ## Row Instance APIs
 
+<OptionsSwitcher
+  links={[
+    {
+      label: 'Table Instance APIs',
+      value: 'table-instance-apis',
+    },
+    {
+      label: 'Column Instance APIs',
+      value: 'column-instance-apis',
+    },
+    {
+      label: 'Row Instance APIs',
+      value: 'row-instance-apis',
+    },
+    {
+      label: 'Cell Instance APIs',
+      value: 'cell-instance-apis',
+    },
+  ]}
+/>
+
+> NOTE: These are NOT [props](/docs/api/props) or [column options](/docs/api/column-options) for Mantine React Table. These are just static methods on a row instance that you can use.
+
 Every row in the table has an associated row instance that can be accessed in many of the callback props that you can use to access a row's information and methods.
 
 You can access and use a `row` object in quite a few places, but here are some of the most common:
@@ -30,7 +54,7 @@ const columns = [
     accessorKey: 'salary',
     header: 'Salary',
     //you can access a row instance in column definition option callbacks like this
-    mantineEditTextInputProps: ({ row }) => ({
+    mantineEditTextFieldProps: ({ row }) => ({
       disabled: row.original.employmentStatus === 'Retired',
     }),
     //or in the component override callbacks like this
@@ -47,6 +71,7 @@ const columns = [
 const table = useMantineReactTable({
   columns,
   data,
+  //or a row instance in callback props like this
   mantineSelectCheckboxProps: ({ row }) => ({
     disabled: row.original.isAccountActive === false,
   }),
@@ -57,8 +82,6 @@ const table = useMantineReactTable({
     </div>
   ),
 });
-
-return <MantineReactTable table={table} />;
 ```
 
 <RowInstanceAPIsTable />
