--- a/apps/mantine-react-table-docs/pages/docs/api/table-instance-apis.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/table-instance-apis.mdx
@@ -1,9 +1,10 @@
 import Head from 'next/head';
 import TableInstanceAPIsTable from '../../../components/prop-tables/TableInstanceAPIsTable';
 import SourceCode from '../../../components/prop-tables/TableInstanceAPIsSource';
+import OptionsSwitcher from '../../../example-groups/OptionsSwitcher';
 
 <Head>
-  <title>Table Instance APIs - Mantine React Table Docs</title>
+  <title>{'Table Instance APIs - Mantine React Table V2 Docs'}</title>
   <meta
     name="description"
     content="All the table instance methods and objects that can be accessed from the table instance in Mantine React Table"
@@ -20,9 +21,30 @@ import SourceCode from '../../../components/prop-tables/TableInstanceAPIsSource'
 
 ## Table Instance APIs
 
-Internally, Mantine React Table uses the `useReactTable` hook from TanStack Table to create a table instance that handles a majority of the logic and events and the state for the table.
+<OptionsSwitcher
+  links={[
+    {
+      label: 'Table Instance APIs',
+      value: 'table-instance-apis',
+    },
+    {
+      label: 'Column Instance APIs',
+      value: 'column-instance-apis',
+    },
+    {
+      label: 'Row Instance APIs',
+      value: 'row-instance-apis',
+    },
+    {
+      label: 'Cell Instance APIs',
+      value: 'cell-instance-apis',
+    },
+  ]}
+/>
 
-You can also access the table instance by consuming a `table` param from many of the callback functions in many of the props.
+> NOTE: These are NOT the [table options](/docs/api/table-options) for Mantine React Table. These are just static methods on a table instance that you can use.
+
+These are the methods available on the `table` instance that is returned from the `useMantineReactTable` hook. You can use these methods to interact with the table instance.
 
 ```jsx
 const columns = useMemo(() => [
@@ -45,8 +67,6 @@ const someEventHandler = () => {
 
 return <MantineReactTable table={table} />;
 ```
-
-> NOTE: These are NOT the [table options](/docs/api/table-options) for Mantine React Table. These are just static methods on a table instance that you can use.
 
 <TableInstanceAPIsTable />
 
