--- a/apps/mantine-react-table-docs/pages/docs/getting-started/usage.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/usage.mdx
@@ -2,7 +2,7 @@ import Head from 'next/head';
 import SimpleCodeSandbox from '../../../examples/SimpleCodeSandbox';
 
 <Head>
-  <title>Usage - Mantine React Table Docs</title>
+  <title>{'Usage - Mantine React Table V2 Docs'}</title>
   <meta
     name="description"
     content="A brief overview of how to use mantine-react-table and create columns and data"
@@ -11,7 +11,7 @@ import SimpleCodeSandbox from '../../../examples/SimpleCodeSandbox';
 
 ## Usage
 
-Here is a brief overview of how to use Mantine React Table. These are very simple examples and will not cover all features of the library, but should be a great starting point.
+Here is a brief overview of how to use Mantine React Table. This is a very simple example and will not cover all features of the library, but should be a great starting point.
 
 ### Setup
 
@@ -19,7 +19,7 @@ To start using MantineReactTable, you first need to [install](/docs/getting-star
 
 There are additional steps and customizations you can do with your Mantine Theme, if you have not set it up in your application already. Check out the [Mantine docs](https://mantine.dev/theming/theme-object/) for more information.
 
-If you need to change the colors of the table components, advanced [Mantine Theming](https://mantine.dev/theming/mantine-provider/#nested-mantineproviders) is covered in the [Customize Components](/docs/guides/customize-components) guide.
+If you need to change the colors of the table components, advanced [Mantine Theming](https://mantine.dev/theming/mantine-provider/) is covered in the [Customize Components](/docs/guides/customize-components) guide.
 
 ### Import MantineReactTable and useMantineReactTable
 
@@ -36,6 +36,8 @@ import { MantineReactTable, useMantineReactTable } from 'mantine-react-table';
 ### Creating Data/Rows
 
 Your data must be an array of objects that have properties matching the accessors in your column definitions. The objects themselves can theoretically be in any shape, but it will be easier to set up your columns if your data is already in a flat object format like the example below, but it is not required.
+
+> **Common Gotcha**: When defining `data` that will be passed to a `useMantineReactTable` hook, make sure that the `data` is _memoized_ or _stable_ (i.e. `useState`, `useMemo`, defined outside of your table component, etc.). Otherwise you may get infinite renders.
 
 #### Simple Data Example
 
@@ -54,11 +56,11 @@ const data = [
 ];
 ```
 
-Your data does NOT have to be created statically like this, of course. More than likely, your data is being fetched from a backend API. Check out the [Remote Data example](/docs/examples/remote) to see how you can use a remote data source.
+Your data does NOT have to be created statically like this, of course. More than likely, your data is being fetched from a backend API. Check out the [Remote Data examples](/docs/examples/react-query) to see how you can fetch data and pass it to your tables.
 
 ### Creating Columns
 
-There are several different ways to define columns, depending on your needs. Let's create some basic "data" columns. That is, columns that connect to our data. Since we defined our data in a flat object format, we can simply use the `accessorKey` property to access the data.
+There are several different ways to define columns, depending on your needs. Let's create some basic `"data"` columns. That is, columns that connect to our data. Most of the time, we can simply use the `accessorKey` property to access the data if the data is in a simple format. Alternatively, if some data in a column needs some logic or processing, you can use the `accessorFn` property to define a function that returns the data for each cell.
 
 #### Simple Column Definition Example
 
@@ -70,6 +72,13 @@ const columns = useMemo(
       header: 'Name',
       accessorKey: 'name', //simple recommended way to define a column
       //more column options can be added here to enable/disable features, customize look and feel, etc.
+      //optional custom cell render
+      Cell: ({ row }) => (
+        <Box style={{ display: 'flex', gap: '2ch', alignItems: 'center' }}>
+          <img src={row.original.imageUrl} />
+          <a href={row.profileUrl}>{row.name}</a>
+        </Box>
+      ),
     },
     {
       header: 'Age',
@@ -80,9 +89,11 @@ const columns = useMemo(
 );
 ```
 
+> Note: Do NOT have your accessors resolve JSX or markup. That's what custom `Cell` renders are for. Accessors should only return primitive data so that the table can sort, filter, search, and group properly.
+
 ### Full Simple Example
 
-Put it all together, and you have a basic table! You can also play around and enable some features, either per column in the column definitions, or as props passed to `<MantineReactTable />`.
+Put it all together, and you have a basic table! You can also play around and enable some features, either per column in the column definitions, or as table options passed to `useMantineReactTable`.
 
 ```tsx
 import { useMemo } from 'react';
@@ -118,6 +129,7 @@ export default function App() {
         accessorKey: 'name', //simple recommended way to define a column
         header: 'Name',
         mantineTableHeadCellProps: { style: { color: 'green' } }, //custom props
+        enableHiding: false, //disable a feature for this column
       },
       {
         accessorFn: (originalRow) => originalRow.age, //alternate way
@@ -134,17 +146,17 @@ export default function App() {
     columns,
     data, //must be memoized or stable (useState, useMemo, defined outside of this component, etc.)
     enableRowSelection: true, //enable some features
-    enableColumnOrdering: true,
+    enableColumnOrdering: true, //enable a feature for all columns
     enableGlobalFilter: false, //turn off a feature
   });
 
   //note: you can also pass table options as props directly to <MantineReactTable /> instead of using useMantineReactTable
-  //but that is not recommended and will likely be deprecated in the future
+  //but the useMantineReactTable hook will be the most recommended way to define table options
   return <MantineReactTable table={table} />;
 }
 ```
 
-> **Note:** It is very important that the columns and data definitions are _memoized_ or _stable_. Otherwise, the entire table will be re-rendered during every react re-render in your application, which can lead to performance issues. To make a variable stable, store it in `useState`, wrap it in `useMemo`, or define it outside of a component so it does not get recreated on every render.
+> **Note:** Again, it is very important that the columns and data definitions are _memoized_ or _stable_. Otherwise, the entire table will be re-rendered during every react re-render in your application, which can lead to performance issues. To make a variable stable, store it in `useState`, wrap it in `useMemo`, define it outside of a component, or in your state management tool of choice so it does not get recreated on every render and cause an infinite re-render loop.
 
 ### Live Code Sandbox Example
 
